[package]
name    = "arduino-uno-example"
version = "0.0.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"

[[bin]]
name = "arduino-uno-example"

[dependencies]
as1115 = { path = "../.." }
embedded-hal = "1.0"
nb = "1.1.0"
panic-halt = "1.0.0"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
